[package]
name = "berechenbarkeit"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["berechenbarkeit-lib"]

[dependencies]
askama = "0.12"
axum = { version = "0.7", features = ["tracing", "multipart", "macros"] }
axum-core = "0.4.3"
axum-extra = { version = "0.9", features = ["form"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
berechenbarkeit-lib = { path = "berechenbarkeit-lib" }
anyhow = "1.0"
sqlx = { version = "0.7" , features = ["postgres", "runtime-tokio-rustls", "any", "bigdecimal", "time"]}
time = { version = "0.3", features = ["local-offset", "serde", "serde-human-readable"] }
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.3"
http = "1.1.0"
serde_urlencoded = "0.7.1"
serde_html_form = "0.2.6"
axum_typed_multipart = "0.11.1"
